# cdxgen-issues

./: js-override.bom.json  js.bom.json  multi.bom.json  py-override.bom.json
simple/: js-override.bom.json  js.bom.json  package-lock.json  package.json  py.bom.json  pyproject.toml
